dsl2/src/test/resources/parsing/invalid/bad_syntax/function_call_void_expression.uss
void foo(int a) {
    int b = a + 1;
}

int three = 1 + foo(1);